# CrashLang

./: .gitignore  CMakeLists.txt  CrashLang.md  README.md
.github/workflows/: ci.yml
docs/: design.md  grammar.ebnf
examples/: 00_lexer_test.cl  01_hello_world.cl  02_parser_test.cl  03_error_test.cl  04_heap_basic.cl  05_use_after_free.cl  06_double_free.cl  07_ownership.cl  08_null_deref.cl  09_flagship.cl  10_memory_leak.cl  11_advanced.cl  12_vm_test.cl
include/crashlang/: ast.hpp  builtins.hpp  bytecode.hpp  codegen.hpp  common.hpp  compiler.hpp  diagnostics.hpp  environment.hpp  errors.hpp  heap.hpp  interpreter.hpp  ir.hpp  ir_builder.hpp  ir_passes.hpp  lexer.hpp  optimizer.hpp  ownership.hpp  parser.hpp  source.hpp  token.hpp  value.hpp  vm.hpp
src/: ast.cpp  builtins.cpp  bytecode.cpp  codegen.cpp  compiler.cpp  diagnostics.cpp  environment.cpp  errors.cpp  heap.cpp  interpreter.cpp  ir.cpp  ir_builder.cpp  ir_passes.cpp  lexer.cpp  main.cpp  optimizer.cpp  ownership.cpp  parser.cpp  source.cpp  token.cpp  value.cpp  vm.cpp
tests/: run_tests.sh
tests/examples/: break_continue.cl  closure_counter.cl  constant_folding.cl  ir_test.cl  match_expr.cl
